Use classes tailwindcss

--- a/src/app/modules/dashboard/components/user-management/user-management-form/user-management-form.component.html
+++ b/src/app/modules/dashboard/components/user-management/user-management-form/user-management-form.component.html
@@ -1,21 +1,21 @@
-<div class="px-4 py-4 sm:px-8">
-  <form class="example-form mx-auto">
-    <mat-form-field class="example-full-width">
+<div class="px-4 mt-8 sm:px-8">
+  <form class="max-w-lg mx-auto">
+    <mat-form-field class="w-full">
       <mat-label>User ID</mat-label>
       <input matInput value="1" />
     </mat-form-field>
 
-    <mat-form-field class="example-full-width">
+    <mat-form-field class="w-full">
       <mat-label>First Name</mat-label>
       <input matInput value="John" />
     </mat-form-field>
 
-    <mat-form-field class="example-full-width">
+    <mat-form-field class="w-full">
       <mat-label>Last Name</mat-label>
       <input matInput value="Smith" />
     </mat-form-field>
 
-    <mat-form-field class="example-full-width">
+    <mat-form-field class="w-full">
       <mat-label>Email</mat-label>
       <input matInput value="john@gmail.com" />
     </mat-form-field>
