--- a/src/app/modules/dashboard/pages/user-management/user-management.component.html
+++ b/src/app/modules/dashboard/pages/user-management/user-management.component.html
@@ -1,1 +1,2 @@
-<p>user-management works!</p>
+<app-user-management-table></app-user-management-table>
+<app-user-management-form></app-user-management-form>
