--- a/src/app/modules/dashboard/components/user-management/user-management-table/user-management-table.component.html
+++ b/src/app/modules/dashboard/components/user-management/user-management-table/user-management-table.component.html
@@ -1,5 +1,10 @@
 <div class="mat-elevation-z8 w-full">
-  <table mat-table [dataSource]="dataSource" matSort>
+  <table
+    mat-table
+    [dataSource]="dataSource"
+    matSort
+    matSortActive="id"
+    matSortDirection="desc">
     <!-- ID Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
