--- a/src/app/modules/dashboard/components/user-management/user-management-table/user-management-table.component.html
+++ b/src/app/modules/dashboard/components/user-management/user-management-table/user-management-table.component.html
@@ -13,13 +13,13 @@
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
       <td mat-cell *matCellDef="let row">{{ row.name }}</td>
     </ng-container>
 
     <!-- Surname Column -->
     <ng-container matColumnDef="surname">
-      <th mat-header-cell *matHeaderCellDef>Surname</th>
+      <th mat-header-cell *matHeaderCellDef>Last Name</th>
       <td mat-cell *matCellDef="let row">{{ row.surname }}</td>
     </ng-container>
 
